MCA App/Release/Release 2.13/src/objects/Receipt__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Syndication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Syndication</label>
        <referenceTo>Syndication__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Period_End_Date__c</fullName>
        <label>Time Period - End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Period_Start_Date__c</fullName>
        <label>Time Period - Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Syndication Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant Payment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Receipt</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RCPT-{00000}</displayFormat>
        <label>Receipt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>